--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
+# === Review Bot Environment Variables ===
+
+# Backend (server)
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# Frontend (Vite)
 VITE_SUPABASE_URL=
-VITE_SUPABASE_PUBLISHABLE_KEY=
 VITE_SUPABASE_ANON_KEY=
+
+# SerpAPI & Google Maps
+SERPAPI_KEY=
+GOOGLE_PLACE_ID=
+PLACE_ID=
+
+# Telegram
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
